--- a/adoption/static/css/adoption.css
+++ b/adoption/static/css/adoption.css
@@ -80,22 +80,22 @@ a {
   padding-left: 5px;
 }
 
-.nav-menu .drop-down .drop-down ul {
+.nav-menu  {
   top: 0;
   left: calc(100% - 30px);
 }
 
-.nav-menu .drop-down .drop-down:hover > ul {
+.nav-menu l {
   opacity: 1;
   top: 0;
   left: 100%;
 }
 
-.nav-menu .drop-down .drop-down > a {
+.nav-menu a {
   padding-right: 35px;
 }
 
-.nav-menu .drop-down .drop-down > a:after {
+.nav-menu a:after {
   font-family: IcoFont;
   position: absolute;
   right: 15px;
@@ -123,24 +123,6 @@ a {
 #main .container {
   text-align: center;
   padding-top: 50px;
-}
-
-@media (max-width: 992px) {
-  #main .container {
-    padding-top: 0;
-  }
-}
-
-@media (min-width: 1024px) {
-  #main {
-    background-attachment: fixed;
-  }
-}
-
-@media (max-width: 768px) {
-  #main {
-    height: 100vh;
-  }
 }
 
 section {
@@ -221,7 +203,7 @@ section {
   font-family: 'Francois One', sans-serif;
 }
 
-.services .icon-box h4 a {
+.services .icon-box h4{
   color:rgb(102,90,87);
   transition: ease-in-out 0.3s;
 }
@@ -239,31 +221,42 @@ section {
 
 .services .iconbox-blue:hover .icon {
   background: #0643FB;
+  text-decoration: none;
 }
 
 .services .iconbox-green:hover .icon {
   background: #028C1E;
+  text-decoration: none;
 }
 .services .iconbox-orange:hover .icon {
   background: #E87A0C;
+  text-decoration: none;
 }
 .services .iconbox-purple:hover .icon {
   background: #560ADA;
+  text-decoration: none;
 }
 .services .iconbox-pink:hover .icon {
   background: #F5B8EA;
+  text-decoration: none;
+}
+.box:hover{
+  text-decoration: none;
 }
 
 .services .iconbox-yellow:hover .icon {
   background: #EDDB13;
+  text-decoration: none;
 }
 
 .services .iconbox-red:hover .icon {
   background:#E6190E;
+  text-decoration: none;
 }
 
 .services .iconbox-skyblue:hover .icon {
   background:#07B9E7;
+  text-decoration: none;
 }
 
 
@@ -478,9 +471,9 @@ button.btn-light:hover{
   text-decoration: none;
 }
 
-
-
-
+button.btn-light:focus{
+  outline: 0;
+}
 
 .wrap {
   height: 100%;
@@ -708,19 +701,20 @@ a.Shelter:hover {
   color:black;
 }
 
-#slideshow { 
-  margin: 50px auto; 
-  position: relative; 
-  width: 240px; 
-  height: 240px; 
-  padding: 10px; 
-  box-shadow: 0 0 20px rgba(0,0,0,0.4); 
+@media (max-width: 992px) {
+  #main .container {
+    padding-top: 0;
+  }
 }
 
-#slideshow > div { 
-  position: absolute; 
-  top: 10px; 
-  left: 10px; 
-  right: 10px; 
-  bottom: 10px; 
+@media (min-width: 1024px) {
+  #main {
+    background-attachment: fixed;
+  }
+}
+
+@media (max-width: 768px) {
+  #main {
+    height: 100vh;
+  }
 }
