--- a/adoption/templates/adoption/home.html
+++ b/adoption/templates/adoption/home.html
@@ -25,8 +25,8 @@
                 <path fill-rule="evenodd" d="M12.786 1.072C11.188.752 9.084.71 7.646 2.146A.5.5 0 0 0 7.5 2.5v11a.5.5 0 0 0 .854.354c.843-.844 2.115-1.059 3.47-.92 1.344.14 2.66.617 3.452 1.013A.5.5 0 0 0 16 13.5v-11a.5.5 0 0 0-.276-.447L15.5 2.5l.224-.447-.002-.001-.004-.002-.013-.006-.047-.023a12.582 12.582 0 0 0-.799-.34 12.96 12.96 0 0 0-2.073-.609zM15 2.82v9.908c-.846-.343-1.944-.672-3.074-.788-1.143-.118-2.387-.023-3.426.56V2.718c1.063-.929 2.631-.956 4.09-.664A11.956 11.956 0 0 1 15 2.82z"/>
               </svg>
             </div>
-            <h4><a href="">Temporary Protection Diary</a></h4>
-            <p>It means the diary that the guardian should fill out during the period of temporary protection of the abandoned dog.</p>
+            <h4 class="box">Temporary Protection Diary</h4>
+            <p class="box">It means the diary that the guardian should fill out during the period of temporary protection of the abandoned dog.</p>
           </div>
         </div>
 
@@ -38,8 +38,8 @@
                 <path d="M3.734 6.352a6.586 6.586 0 0 0-.445.275 1.94 1.94 0 0 0-.346.299 1.38 1.38 0 0 0-.252.369c-.058.129-.1.295-.123.498h.282c.242 0 .431.06.568.182.14.117.21.29.21.521a.697.697 0 0 1-.187.463c-.12.14-.289.21-.503.21-.336 0-.577-.108-.721-.327C2.072 8.619 2 8.328 2 7.969c0-.254.055-.485.164-.692.11-.21.242-.398.398-.562.16-.168.33-.31.51-.428.18-.117.33-.213.451-.287l.211.352zm2.168 0a6.588 6.588 0 0 0-.445.275 1.94 1.94 0 0 0-.346.299c-.113.12-.199.246-.257.375a1.75 1.75 0 0 0-.118.492h.282c.242 0 .431.06.568.182.14.117.21.29.21.521a.697.697 0 0 1-.187.463c-.12.14-.289.21-.504.21-.335 0-.576-.108-.72-.327-.145-.223-.217-.514-.217-.873 0-.254.055-.485.164-.692.11-.21.242-.398.398-.562.16-.168.33-.31.51-.428.18-.117.33-.213.451-.287l.211.352z"/>
               </svg>
             </div>
-            <h4><a href="">Adoption Post</a></h4>
-            <p>It means to prepare all the forms and documents that need to be attached to adopt an abandoned dog and write an adoption post.</p>
+            <h4 class="box">Adoption Post</h4>
+            <p class="box">It means to prepare all the forms and documents that need to be attached to adopt an abandoned dog and write an adoption post.</p>
           </div>
         </div>
 
@@ -53,8 +53,8 @@
                 <path d="M2.5 4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5H3a.5.5 0 0 1-.5-.5V4z"/>
               </svg>
             </div>
-            <h4><a href="">Application For Adoption</a></h4>
-            <p>By applying for the adoption of abandoned dogs, it means the start of a new family.<br><br></p>
+            <h4 class="box">Application For Adoption</h4>
+            <p class="box">By applying for the adoption of abandoned dogs, it means the start of a new family.<br><br></p>
           </div>
         </div>
 
@@ -67,8 +67,8 @@
                 <path fill-rule="evenodd" d="M4.5 11.5A.5.5 0 0 1 5 11h3a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm0-2A.5.5 0 0 1 5 9h6a.5.5 0 0 1 0 1H5a.5.5 0 0 1-.5-.5zm1.639-3.708l1.33.886 1.854-1.855a.25.25 0 0 1 .289-.047l1.888.974V7.5a.5.5 0 0 1-.5.5H5a.5.5 0 0 1-.5-.5V7s1.54-1.274 1.639-1.208zM6.25 5a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5z"/>
               </svg>
             </div>
-            <h4><a href="">Adoption Story Post</a></h4>
-            <p>It means simply recording the daily lives of abandoned dogs and guardians after adoption.</p>
+            <h4 class="box">Adoption Story Post</h4>
+            <p class="box">It means simply recording the daily lives of abandoned dogs and guardians after adoption.</p>
           </div>
         </div>
 
@@ -79,25 +79,14 @@
                 <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
               </svg>
             </div>
-            <h4><a href="">Status Of Protection And Adoption</a></h4>
-            <p>It means the health and development status of abandoned dogs after adoption.<br><br></p>
+            <h4 class="box">Status Of Protection And Adoption</h4>
+            <p class="box">It means the health and development status of abandoned dogs after adoption.<br><br></p>
           </div>
         </div>
 
         <h3>3. Additional</h3>
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-          <div class="icon-box iconbox-skyblue">
-            <div class="icon">
-              <svg class="bi bi-exclamation-triangle-fill" width="7em" height="7em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 5zm.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
-              </svg>
-            </div>
-            <h4><a href="">Report to Resque</a></h4>
-            <p>It means a place where anyone can report if there is an abandoned dog to be rescued.</p>
-          </div>
-        </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+        <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box iconbox-purple">
             <div class="icon">
               <svg class="bi bi-emoji-smile" width="13em" height="13em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -106,12 +95,12 @@
                 <path d="M7 6.5C7 7.328 6.552 8 6 8s-1-.672-1-1.5S5.448 5 6 5s1 .672 1 1.5zm4 0c0 .828-.448 1.5-1 1.5s-1-.672-1-1.5S9.448 5 10 5s1 .672 1 1.5z"/>
               </svg>
             </div>
-            <h4><a href="">Shelter Volunteer</a></h4>
-            <p>It means applying for volunteer work to an abandoned dog shelter.</p>
+            <h4 class="box">Shelter Volunteer</h4>
+            <p class="box">It means applying for volunteer work to an abandoned dog shelter.</p>
           </div>
         </div>
 
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+        <div class="col-lg-6 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
           <div class="icon-box iconbox-pink">
             <div class="icon">
               <svg class="bi bi-gift" width="5em" height="5em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -120,8 +109,8 @@
                 <path fill-rule="evenodd" d="M15 4H1v1h14V4zM1 3a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H1z"/>
               </svg>
             </div>
-            <h4><a href="">Donation Abandoned Dog</a></h4>
-            <p>It means donating to an abandoned dog or to an abandoned dog shelter.</p>
+            <h4 class="box">Donation Abandoned Dog</h4>
+            <p class="box">It means donating to an abandoned dog or to an abandoned dog shelter.</p>
           </div>
         </div>
       </div>
