--- a/adoption/templates/adoption/post_new.html
+++ b/adoption/templates/adoption/post_new.html
@@ -11,7 +11,7 @@
                 {{ form.as_p }}
             </div>
             <br>
-            <a id = "haha" class="btn-light" href="{% url 'post_list' %}">취소</a>
+            <a id = "cancel" class="btn-light" href="{% url 'post_list' %}">취소</a>
             <button  type="submit" class="btn-light">작성</button>
         </form>
         
