--- a/review/templates/review/review_post_edit.html
+++ b/review/templates/review/review_post_edit.html
@@ -13,7 +13,7 @@
                     {{ review_form.as_p }}
                 </div>
                 <a id="cancel" class="btn-light" href="{% url 'review_post_list' %}">취소</a>
-                <button type="submit" class="btn btn-light">수정</button>
+                <button type="submit" class="btn-light">수정</button>
             </form>
         </div>
     </div>
