--- a/review/templates/review/review_post_list.html
+++ b/review/templates/review/review_post_list.html
@@ -13,6 +13,7 @@
                         <img src="{{review_post.review_image.url}}" width="260px" height="260px">
                     {% endif %}
                     <br><br>
+                    <p style="text-align: center; font-family: 'Do Hyeon', sans-serif;" >{{review_post.review_author}}</p>
                     <p style="text-align: center; font-family: 'Do Hyeon', sans-serif;">{{review_post.review_created_date}} {{review_post.review_created_date | timesince }}</p>
                 </div>
             {% endfor %}
